footer pages link fixed

--- a/pages/booking.html
+++ b/pages/booking.html
@@ -40,7 +40,9 @@
           >
         </li>
         <li class="hover-bounce">
-          <a class="px-05 mx-05 pb-05 hover-border no-underline active" href="#"
+          <a
+            class="px-05 mx-05 pb-05 hover-border no-underline active"
+            href="booking.html"
             >Booking</a
           >
         </li>
@@ -70,7 +72,7 @@
           ></a>
         </li>
         <li>
-          <a class="no-underline" href="#">
+          <a class="no-underline" href="booking.html">
             <ion-icon
               name="calendar-outline"
               class="text-lg px-05 mx-05 pb-05 hover-bounce hover-border active"
@@ -186,12 +188,16 @@
                 >
               </li>
               <li class="pb-1 text-left">
-                <a class="no-underline text-secondary hover-border" href="#"
+                <a
+                  class="no-underline text-secondary hover-border"
+                  href="booking.html"
                   >Booking</a
                 >
               </li>
               <li class="pb-1 text-left">
-                <a class="no-underline text-secondary hover-border" href="#"
+                <a
+                  class="no-underline text-secondary hover-border"
+                  href="contact.html"
                   >Contact</a
                 >
               </li>
