--- a/pages/contact.html
+++ b/pages/contact.html
@@ -47,7 +47,9 @@
           >
         </li>
         <li class="hover-bounce">
-          <a class="px-05 mx-05 pb-05 hover-border no-underline active" href="#"
+          <a
+            class="px-05 mx-05 pb-05 hover-border no-underline active"
+            href="contact.html"
             >Contact</a
           >
         </li>
@@ -78,7 +80,7 @@
           ></a>
         </li>
         <li>
-          <a class="no-underline" href="#">
+          <a class="no-underline" href="contact.html">
             <ion-icon
               name="mail-outline"
               class="text-lg px-05 mx-05 pb-05 hover-bounce hover-border active"
@@ -186,7 +188,9 @@
                 >
               </li>
               <li class="pb-1 text-left">
-                <a class="no-underline text-secondary hover-border" href="#"
+                <a
+                  class="no-underline text-secondary hover-border"
+                  href="contact.html"
                   >Contact</a
                 >
               </li>
