--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -35,7 +35,7 @@
         <li class="hover-bounce">
           <a
             class="px-05 mx-05 pb-05 hover-border hover-bounce no-underline active"
-            href="#"
+            href="gallery.html"
             >Gallery</a
           >
         </li>
@@ -64,7 +64,7 @@
           </a>
         </li>
         <li>
-          <a class="no-underline" href="#">
+          <a class="no-underline" href="gallery.html">
             <ion-icon
               name="image-outline"
               class="text-lg px-05 mx-05 pb-05 hover-border hover-bounce active"
@@ -165,7 +165,7 @@
         </div>
       </div>
       <div class="hidden center pt-2 my-2">
-        <a class="flex center btn" href="#">Book Now</a>
+        <a class="flex center btn" href="booking.html">Book Now</a>
       </div>
     </section>
     <section class="flex column center pr-15 pl-15 py-2">
@@ -1207,17 +1207,23 @@
                 >
               </li>
               <li class="pb-1 text-left">
-                <a class="no-underline text-secondary hover-border" href="#"
+                <a
+                  class="no-underline text-secondary hover-border"
+                  href="gallery.html"
                   >Gallery</a
                 >
               </li>
               <li class="pb-1 text-left">
-                <a class="no-underline text-secondary hover-border" href="#"
+                <a
+                  class="no-underline text-secondary hover-border"
+                  href="booking.html"
                   >Booking</a
                 >
               </li>
               <li class="pb-1 text-left">
-                <a class="no-underline text-secondary hover-border" href="#"
+                <a
+                  class="no-underline text-secondary hover-border"
+                  href="contact.html"
                   >Contact</a
                 >
               </li>
